syntax = "proto3";

package cn.edu.cug.cs.gtl.protos;

option cc_enable_arenas = true;
option csharp_namespace = "cn.edu.cug.cs.gtl.protos";
option java_package = "cn.edu.cug.cs.gtl.protos";
option java_multiple_files = true;
option java_outer_classname = "Sql";


message SqlCommand {
    string command_text = 1;
}

message SqlRecord {
    repeated string element = 1;
}

message SqlColumn{
    string column_name = 1;
    string column_comment = 2;
    repeated string element = 3;
}

message SqlDataSet {
    repeated string column_name = 1;
    repeated string column_comment = 2;
    repeated SqlRecord record = 3;
}

message SqlResult {
    bool status = 1; //返回执行的状态
    string command_text = 2;
    SqlDataSet dataset = 3;
}

service SqlCommandService {
    rpc execute (SqlCommand) returns (SqlResult) {
    }
}

